# ravel

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/todomvc/: Cargo.toml  index.html
examples/todomvc/src/: main.rs
examples/tutorial/: Cargo.toml  index.html  style.css
examples/tutorial/src/: main.rs
ravel/: Cargo.toml
ravel-inline-style/: Cargo.toml
ravel-inline-style/src/: lib.rs
ravel-web/: Cargo.toml  build.rs  generate.toml
ravel-web/src/: any.rs  attr.rs  dom.rs  el.rs  event.rs  lib.rs  list.rs  option.rs  run.rs  text.rs
ravel-web/src/attr/: mod.rs  types.rs
ravel-web/src/collections/: btree_map.rs  iter.rs  mod.rs  slice.rs  vec.rs
ravel-web/src/el/: mod.rs  types.rs
ravel/src/: adapt.rs  any.rs  float.rs  lib.rs  local.rs
