[workspace]
resolver = "2"
members = [
  "ravel",
  "ravel-web",

  "examples/todomvc",
  "examples/tutorial",
]

[workspace.dependencies]
atomic-waker = "1.1.2"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures-micro = "0.5.0"
gloo-events = "0.2.0"
gloo-utils = "0.2.0"
log = "0.4.21"
paste = "1.0.15"
ravel = { version = "0.2.0", path = "./ravel" }
ravel-web = { version = "0.4.1", path = "./ravel-web" }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
